# wise-sdk

./: .gitignore  Kconfig  Makefile  README.md  Release Notes.md  config.mk
api/: .codespellrc  .pre-commit-config.yaml  Kconfig  Makefile  README.md  scm_adc.c  scm_audio.c  scm_channel.c  scm_cli_adc.c  scm_cli_audio.c  scm_cli_crypto.c  scm_cli_efuse.c  scm_cli_fs.c  scm_cli_gpio.c  scm_cli_i2c.c  scm_cli_i2s.c  scm_cli_pm.c  scm_cli_pta.c  scm_cli_spi.c  scm_cli_timer.c  scm_cli_uart.c  scm_cli_wifi.c  scm_crypto.c  scm_efuse.c  scm_fs.c  scm_gpio.c  scm_i2c.c  scm_i2s.c  scm_pm.c  scm_pta.c  scm_spi.c  scm_timer.c  scm_uart.c  scm_wdt.c  scm_wifi.c
app/: Kconfig  Makefile
app/ayla/ayla_matter_demo/main/: .style_ok  CMakeLists.txt  app_common.c  app_common.h  app_int.h  app_main.c  demo_matter.c  demo_ota.c
app/ayla/ayla_matter_demo/main/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-init-callback.cpp
app/ayla/ayla_matter_demo/main/zap-generated/: IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
app/ayla/components/ada/: CMakeLists.txt  ada_conf.c  ada_err.c  ada_lock.h  ada_mbuf.c  ada_mbuf.h  ada_timer.c  ada_version.mk  ame.c  ame.h  ame_json.c  ame_json.h  batch.c  batch_int.h  build.h  build.h.in  ca_cert.h  client.c  client_ame.c  client_ame.h  client_auth.c  client_batch.c  client_batch.h  client_cli.c  client_common.h  client_conf.c  client_ifp.c  client_int.h  client_lock.h  client_metrics.c  client_ota.c  client_prop.c  client_req.h  client_task.c  client_timer.h  clientv2_msg.c  clientv2_msg.h  conf_json.c  http2mqtt_client.c  http2mqtt_client.h  (+33 more)
app/ayla/components/ada/certs/: Makefile  ca_certs_der_txt.c
app/ayla/components/ada/include/ada/: ada.h  ada_conf.h  ada_lan_conf.h  ada_timer.h  ada_wifi.h  batch.h  client.h  client_ota.h  dnss.h  err.h  generic_session.h  lan_state.h  linker_text.h  local_control.h  metrics.h  notify.h  onboard_msg.h  prop.h  prop_mgr.h  sched.h  server_req.h  sprop.h  task_label.h
app/ayla/components/adb/: CMakeLists.txt  adb.c  adb_ayla_svc.c  adb_conn_svc.c  adb_mbox_svc.c  adb_wifi_cfg_svc.c
app/ayla/components/adb/include/adb/: adb.h  adb_ayla_svc.h  adb_conn_svc.h  adb_mbox_svc.h  adb_wifi_cfg_svc.h  al_bt.h
app/ayla/components/adm/: CMakeLists.txt  Kconfig  adm.cpp  adm_cli.cpp  adm_data_provider.cpp  adm_data_provider.h  adm_int.h  ayla-lc-server.cpp  ayla-server.cpp
app/ayla/components/adm/include/adm/: adm.h  adm_ayla_base.h  adm_ayla_numbers.h  adm_cli.h  adm_csa_numbers.h  adm_local_control.h
app/ayla/components/adw/: CMakeLists.txt  wifi.c  wifi_conf.c  wifi_int.h  wifi_page.c
app/ayla/components/adw/include/adw/: adw.h  wifi.h  wifi_conf.h
app/ayla/components/al/: CMakeLists.txt
app/ayla/components/al/cmsis_os/: al_os_lock.c  al_os_thread.c
app/ayla/components/al/freertos/: al_err.c  al_os_lock.c  al_os_thread.c
app/ayla/components/al/include/al/: al_ada_thread.h  al_aes.h  al_assert.h  al_bt.h  al_clock.h  al_err.h  al_hash_sha1.h  al_hash_sha256.h  al_hmac_sha256.h  al_httpd.h  al_log.h  al_matter.h  al_net_addr.h  al_net_dns.h  al_net_if.h  al_net_mdnss.h  al_net_sntp.h  al_net_stream.h  al_os_lock.h  al_os_mem.h  al_os_reboot.h  al_os_thread.h  al_persist.h  al_random.h  al_rsa.h  al_utypes.h  al_wifi.h
app/ayla/components/al/lwip/: al_ada_thread.c  al_net_addr.c  pfm_net_socket.c
app/ayla/components/al/lwip/include/platform/: pfm_ada_thread.h  pfm_net_socket.h
app/ayla/components/al/mbedtls/: al_aes.c  al_hash_sha1.c  al_hash_sha256.c  al_hmac_sha256.c  al_net_stream.c  al_random.c  al_rsa.c  ca_certs_der.txt  pfm_certs.h  pfm_linker_text.h  pfm_rng.h
app/ayla/components/al/mbedtls/include/platform/: pfm_random.h
app/ayla/components/al/wise/: al_assert.c  al_bt.c  al_bt_cli.c  al_clock.c  al_httpd.c  al_log.c  al_log_core.c  al_log_core_sum.c  al_log_snap.c  al_matter.cpp  al_net_dns.c  al_net_if.c  al_net_mdnss.c  al_net_sntp.c  al_os_mem.c  al_os_reboot.c  al_persist.c  al_wifi.c  pfm_ada_thread.c  pfm_net_socket_init.c  pfm_random.c
app/ayla/components/al/wise/include/al/: al_compiler.h
app/ayla/components/al/wise/include/platform/: pfm_bt.h  pfm_clock.h  pfm_const.h  pfm_endian.h  pfm_matter.h  pfm_net_addr.h  pfm_net_if.h  pfm_os_mem.h  pfm_os_thread.h
app/ayla/components/ayla/: CMakeLists.txt  ayla_base64.c  callback.c  clock_fmt.c  clock_sw.c  clock_utils.c  conf.c  format_mac.c  format_string.c  hostname_valid.c  http.c  ipaddr_fmt.c  jsmn_get.c  jsmn_iterate.c  json_format_string.c  log.c  log_buf.c  log_cmd.c  log_conf.c  log_io.c  parse_argv.c  parse_date.c  parse_hex.c  parse_mac.c  snprintf.c  time_cli.c  timer.c  tlv.c  uri_arg_allowed_map.c  uri_decode.c  uri_encode.c  utf8.c  vsnprintf.c
app/ayla/components/ayla/include/ayla/: assert.h  ayla_proto_mcu.h  ayla_spi_mcu.h  base64.h  callback.h  clock.h  compiler_gcc.h  compiler_iar.h  conf.h  conf_token.h  conf_tokens.h  country_codes.h  endian.h  http.h  ipaddr_fmt.h  jsmn_get.h  log.h  mod_log.h  parse.h  patch.h  random.h  snprintf.h  timer.h  tlv.h  tlv_access.h  utypes.h  wifi_error.h  xml.h
app/ayla/components/ayla/include/net/: base64.h  net.h  net_crypto.h
configs/: scm1612s_2m_defconfig  scm1612s_ayla_defconfig  scm1612s_bl_2m_defconfig  scm1612s_bl_defconfig  scm1612s_bl_ram_defconfig  scm1612s_coap_defconfig  scm1612s_defconfig  scm1612s_fs_defconfig  scm1612s_httpclient_defconfig  scm1612s_httpserver_defconfig  scm1612s_i2c_defconfig  scm1612s_i2s_defconfig  scm1612s_ipv6_defconfig  scm1612s_matter_defconfig  scm1612s_mdns_defconfig  scm1612s_mqtt_defconfig  scm1612s_mtp_defconfig  scm1612s_promisc_defconfig  scm1612s_sdio_defconfig  scm1612s_sntp_defconfig  scm1612s_spi_defconfig  scm1612s_spim_defconfig  scm1612s_uart_defconfig  scm1612s_usb_defconfig
hal/: Makefile
include/: assert.h  at.h  bitfield.h  bug.h  cmsis_os.h  crc.h  dirent.h  errno.h  fcntl.h  gcov.h  getopt.h  hostbootconf.h  ifaddrs.h  malloc.h  mem.h  mem_slab.h  mpool.h  mtsmp.h  poll.h  proc.h  stdio.h  stdlib.h  string.h  timestamp.h  unistd.h  version.h  vfs-spiffs.h  vfs.h  wlan.h  (+1 more)
(+1252 files in other folders)
